@@ -1,5 +1,7 @@
 === HEAD
 
+* Remove Model.database_opened (jeremyevans)
+
 * Remove Model.super_dataset (jeremyevans)
 
 * Deprecate .create_with_params, .create_with, #set, #update, #update_with, and #new_record from Sequel::Model (jeremyevans)
